# flight-search-e2e

./: .env.example  .gitignore  README.md  conftest.py  main.py  pyproject.toml
core/: config.py
data/: istanbul_lefkosa_2026-04-15_raw_flights.csv  istanbul_lefkosa_2026-04-15_top_cost_effective.csv
pages/: base_page.py  flight_result_page.py  home_page.py  locators.py  passenger_info_page.py  payment_page.py
tests/: test_data_analysis.py  test_flight_search.py
utils/: data_analyzer.py  mock_data.py  validators.py
