[project]
name = "flight-search-e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "allure-pytest>=2.15.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
